tests-integration/fixtures/checking/262_exhaustive_char_partial/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
testPartialA :: Char -> Int
testPartialB :: Char -> Int
testWildcard :: Char -> Int

Types

Diagnostics
warning[MissingPatterns]: Pattern match is not exhaustive. Missing: _
  --> 4:18..5:11
  |
4 | testPartialA c = case c of
  |                  ^~~~~~~~~
error[NoInstanceFound]: No instance found for: Partial
  --> 3:1..3:28
  |
3 | testPartialA :: Char -> Int
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~
warning[MissingPatterns]: Pattern match is not exhaustive. Missing: _
  --> 8:18..9:11
  |
8 | testPartialB c = case c of
  |                  ^~~~~~~~~
error[NoInstanceFound]: No instance found for: Partial
  --> 7:1..7:28
  |
7 | testPartialB :: Char -> Int
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~
